--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-
+    <h2>Fetch (para trabajar con json)</h2>
+    <ol id="fetch"></ol>
 
     <script src="./index.js"></script>
 </body>
